--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             alambre, tapas de gaseosa y silicona XD y me gusta porque me senti muy creativo por siento que es especial
             a la hora de hacerlo le agregue mis propios detalles fue un proceso un poquito larguito pero
             pero me diverti haciendolo y su organo funcional es el corazon y su función cumple que el verdadero spiderman tiene
-            un gran corazon, etc...
+            un gran corazon, etc... y te quiere invitar a que hagas ejercicio y comer saludable para ser como el y cuidar tu corazon.
         </h2>
     </center>
 </body>
