--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
         d1EfS/wET/pNjm9CvvX1YemXwiWeuNFgdGwzsAV9LXOUUqFjxFo+oVoKCzClIU13UbHUeOTyUz4wLX88oMBt062e7jVGLmAH4y4zQi/06pJzS/wbWhGNKP7rVifAn436rdPvNCJ7Fwsl
         /0wJ3plLSwj8kbGtWFVJ9vbqjwhzfHS+da03ZQ9J0K/RH91ocY8EYyZECT/7MheRpAqvy47mhktyqDhtGIjEdjUYLctYV1+0MPWjX6woUDMSDGRmZVEfoDuIx8eey3he+uyKafzw+IHg
         rN2UVCP8JhvF1+efGg3o25QZ/o7MaaJbDuj7hmz3C+KzxuN08Ns0CSKv5EwyJz4QHylX0iYpdPH/h8l8iPhtPEiuaWlpaWlpeUv+Q/PuTyLcx3dHwAAAABJRU5ErkJggg==" alt="1500px">
-        <h2>El nombre de mi robot es Spiderbot lo hice con materiales reciclables y uno que otro comprados, use carton paja, temperas,
-            alambre, tapas de gaseosa y silicona XD y me gusta porque me senti muy creativo por siento que es especial
+        <h2>El nombre de mi robot es Spiderbot lo hice con materiales reciclables y uno que otros comprados, usé cartón paja, temperas,
+            alambre, tapas de gaseosa y silicona XD y me gusta porque me sentí muy creativo por siento que es especial
             a la hora de hacerlo le agregue mis propios detalles fue un proceso un poquito larguito pero
-            pero me diverti haciendolo y su organo funcional es el corazon y su función cumple que el verdadero spiderman tiene
-            un gran corazon, etc... y te quiere invitar a que hagas ejercicio y comer saludable para ser como el y cuidar tu corazon.
+            pero me divertí haciéndolo y su órgano funcional es el corazón y su función cumple que el verdadero Spiderman tiene
+            un gran corazón, etc.… y te quiere invitar a que hagas ejercicio y comer saludable para ser como él y cuidar tu corazón.
         </h2>
+        <Img src= https://media.tenor.com/l8jEUawyFYEAAAAC/yang-gang-fitness-yang-gang.gif></Img>
+        
     </center>
 </body>
 </html>
